fix and refactor: label flipping attack

--- a/nebula/frontend/config/participant.json.example
+++ b/nebula/frontend/config/participant.json.example
@@ -97,12 +97,12 @@
   },
   "adversarial_args": {
     "attacks": "No Attack",
-    "targeted": false,
     "poisoned_sample_percent": 0,
     "poisoned_ratio": 0,
+    "targeted": false,
     "target_label": 0,
-    "noise_type": "salt",
-    "target_changed_label": 0
+    "target_changed_label": 0,
+    "noise_type": "salt"
   },
   "tracking_args": {
     "enable_remote_tracking": false,
