--- a/nebula/frontend/config/participant.json.example
+++ b/nebula/frontend/config/participant.json.example
@@ -75,6 +75,11 @@
     "enabled": false,
     "strategy": "default"
   },
+  "sustainability_args" : {
+    "pue": 100,
+    "renewable_energy": 0,
+    "communication_method": 0.0005506
+  },
   "resource_args": {
     "resource_constricted": false,
     "resource_constraint_cpu": 0,
@@ -96,7 +101,7 @@
   },
   "aggregator_args": {
     "algorithm": "FedAvg",
-    "aggregation_timeout": 60
+    "aggregation_timeout": 30
   },
   "defense_args": {
     "with_reputation": false,
