--- a/nebula/frontend/config/participant.json.example
+++ b/nebula/frontend/config/participant.json.example
@@ -98,12 +98,7 @@
   },
   "adversarial_args": {
     "attacks": "No Attack",
-    "poisoned_sample_percent": 0,
-    "poisoned_ratio": 0,
-    "targeted": false,
-    "target_label": 0,
-    "target_changed_label": 0,
-    "noise_type": "salt"
+    "attack_params" : {}
   },
   "tracking_args": {
     "enable_remote_tracking": false,
